[gd_scene load_steps=7 format=3 uid="uid://h480p3wxg7ul"]

[ext_resource type="Script" path="res://Test/Test.gd" id="1_5ye0a"]
[ext_resource type="PackedScene" uid="uid://bcc3egfuhhsp4" path="res://Assets/Scene/PlanetGame/PlanetGame.tscn" id="2_rxjwq"]
[ext_resource type="Shader" path="res://Assets/Material/Shader/PixelPerfectOutline.gdshader" id="11_xkp4f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e56wt"]
render_priority = 0
shader = ExtResource("11_xkp4f")
shader_parameter/outline_color = Color(1, 0, 0, 1)
shader_parameter/outline_width = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bgj3r"]
next_pass = SubResource("ShaderMaterial_e56wt")

[sub_resource type="BoxMesh" id="BoxMesh_6siry"]

[node name="Test" type="Node3D"]
script = ExtResource("1_5ye0a")

[node name="PlanetGame" parent="." instance=ExtResource("2_rxjwq")]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
material_override = SubResource("StandardMaterial3D_bgj3r")
mesh = SubResource("BoxMesh_6siry")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 132.0
offset_right = 206.0
offset_bottom = 478.0
mouse_filter = 0
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "星球规模："

[node name="SpinBoxScaleLevel" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "1-4之间"
min_value = 1.0
max_value = 4.0
value = 2.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "资源富集度："

[node name="SpinBoxResourceRichness" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "1-4之间"
max_value = 1.0
step = 0.01
value = 0.4

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "海拔强度："

[node name="SpinBoxModificationStrength" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "越高，则海拔修改更强"
min_value = 1.0
max_value = 3.0
value = 2.0

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "高原/低原比例："

[node name="SpinBoxFlatLevel" type="SpinBox" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "越高，则更容易生成高海拔平原或低海拔平原
越低，则更容易生成普通平原"
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "高耸程度："

[node name="SpinBoxHeightLevel" type="SpinBox" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "越高，则更容易生成高海拔"
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "低海拔阈值："

[node name="SpinBoxThresholdDecrease" type="SpinBox" parent="VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "采样点灰度低于该值才会进行低海拔修改"
max_value = 0.5
step = 0.01
value = 0.1

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "高海拔阈值："

[node name="SpinBoxThresholdIncrease" type="SpinBox" parent="VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "采样点灰度高于该值才会进行高海拔修改"
min_value = 0.5
max_value = 1.0
step = 0.01
value = 0.9

[node name="HBoxContainer8" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer8"]
layout_mode = 2
text = "随机种："

[node name="LineEditRandomSeed" type="LineEdit" parent="VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "留空以随机"

[node name="ButtonConfirm" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "确认"

[node name="ButtonGenerate" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "生成"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 725.0
offset_top = 615.0
offset_right = 1000.0
offset_bottom = 790.0
mouse_filter = 2
bbcode_enabled = true
text = "[img=<16>]res://Assets/Icon/apple.png[/img]
[color=skyblue]123[/color]"

[connection signal="pressed" from="VBoxContainer/ButtonGenerate" to="." method="_on_button_generate_pressed"]
